--- a/charts/newrelic-infrastructure-v3/values.yaml
+++ b/charts/newrelic-infrastructure-v3/values.yaml
@@ -75,9 +75,9 @@ kubelet:
       cpu: 100m
       memory: 150M
   config:
-    # Timeout for the kubelet APIs contacted by the integration
+    # -- Timeout for the kubelet APIs contacted by the integration
     timeout: 5s
-    # Number of retries after timeout expired
+    # -- Number of retries after timeout expired
     retries: 3
   # port:
   # scheme:
@@ -120,9 +120,9 @@ ksm:
       cpu: 100m
       memory: 150M
   config:
-    # Timeout for the ksm API contacted by the integration
+    # -- Timeout for the ksm API contacted by the integration
     timeout: 5s
-    # Number of retries after timeout expired
+    # -- Number of retries after timeout expired
     retries: 3
   # -- if specified autodiscovery is not performed and the specified URL is used
   # staticUrl: "http://test.io:8080/metrics"
@@ -182,9 +182,9 @@ controlPlane:
       cpu: 100m
       memory: 150M
   config:
-    # Timeout for the Kubernetes APIs contacted by the integration
+    # -- Timeout for the Kubernetes APIs contacted by the integration
     timeout: 5s
-    # Number of retries after timeout expired
+    # -- Number of retries after timeout expired
     retries: 3
     # -- ETCD monitoring configuration
     # @default -- Common settings for most K8s distributions.
