--- a/charts/nri-bundle/Chart.yaml
+++ b/charts/nri-bundle/Chart.yaml
@@ -1,8 +1,8 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: "1.0"
 description: A Helm chart to deploy New Relic integrations bundled together
 name: nri-bundle
-version: 3.6.2
+version: 4.0.5
 home: https://github.com/newrelic/helm-charts
 icon: https://newrelic.com/assets/newrelic/source/NewRelic-logo-square.svg
 maintainers:
@@ -14,3 +14,55 @@ maintainers:
   - name: paologallinaharbur
   - name: roobre
   - name: sigilioso
+
+dependencies:
+  - name: newrelic-infrastructure
+    repository: https://newrelic.github.io/nri-kubernetes
+    condition: infrastructure.enabled
+    version: 3.3.1
+
+  - name: nri-prometheus
+    repository: file://../nri-prometheus
+    condition: prometheus.enabled
+    version: 1.14.0
+
+  - name: nri-metadata-injection
+    repository: file://../nri-metadata-injection
+    condition: webhook.enabled
+    version: 2.2.0
+
+  - name: newrelic-k8s-metrics-adapter
+    repository: https://newrelic.github.io/newrelic-k8s-metrics-adapter
+    condition: metrics-adapter.enabled
+    version: 0.7.3
+
+  - name: kube-state-metrics
+    repository: https://kubernetes.github.io/kube-state-metrics
+    condition: ksm.enabled
+    version: 2.13.2
+
+  - name: nri-kube-events
+    repository: file://../nri-kube-events
+    condition: kubeEvents.enabled
+    version: 1.13.0
+
+  - name: newrelic-logging
+    repository: file://../newrelic-logging
+    condition: logging.enabled
+    version: 1.10.9
+
+  - name: newrelic-pixie
+    repository: file://../newrelic-pixie
+    condition: newrelic-pixie.enabled
+    version: 1.5.1
+
+  - name: pixie-operator-chart
+    alias: pixie-chart
+    repository: https://pixie-operator-charts.storage.googleapis.com
+    condition: pixie-chart.enabled
+    version: 0.0.25
+
+  - name: newrelic-infra-operator
+    repository: file://../newrelic-infra-operator
+    condition: newrelic-infra-operator.enabled
+    version: 0.6.0
