feat(nri-bundle): keeping old legacy to be still able to release patches

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # Internal dependency charts of the nri-bundle chart
+charts/nri-bundle-legacy/charts/newrelic-*
+charts/nri-bundle-legacy/charts/nri-*
 charts/nri-bundle/charts/newrelic-*
 charts/nri-bundle/charts/nri-*
 # Downloaded chart dependencies
