debug(test): removing things to avoid wasting minutes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           ref: gh-pages
       - name: Download remote index file and check equality
         run: |
-          curl -vsSL https://newrelic.github.io/helm-charts/index.yaml > index.yaml.remote
+          curl -vsSL https://paologallinaharbur.github.io/helm-charts/index.yaml > index.yaml.remote
           test "$(md5sum < index.yaml)" = "$(md5sum < index.yaml.remote)"
 
   release:
