--- a/.github/ct-lint.yaml
+++ b/.github/ct-lint.yaml
@@ -18,3 +18,4 @@ chart-repos:
   - kube-state-metrics=https://kubernetes.github.io/kube-state-metrics
   - pixie-operator=https://pixie-operator-charts.storage.googleapis.com
   - newrelic-k8s-metrics-adapter=https://newrelic.github.io/newrelic-k8s-metrics-adapter
+  - newrelic-infrastructure=https://newrelic.github.io/nri-kubernetes
