--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Add newrelic-k8s-metrics-adapter repository
         run: helm repo add newrelic-k8s-metrics-adapter https://newrelic.github.io/newrelic-k8s-metrics-adapter
 
+      - name: Add nri-kubernetes repository
+        run: helm repo add newrelic-infrastructure https://newrelic.github.io/nri-kubernetes
+
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
